testsuite/tests/typecheck/should_fail/T21327.hs
{-# LANGUAGE ImplicitParams, MagicHash #-}

module T21327 where

import GHC.Exts

foo () = (?p :: Int#)
